--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot",
-    "build:prod": "webpack -p && cp src/index.html dist/index.html"
+    "build": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "build:prod": "cross-env NODE_ENV=development webpack -p"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "cross-env": "^5.0.5",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
