--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "reactjs-basics",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack"
+    "start": "react-qstart",
+    "build": "react-qstart build"
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,10 @@
   },
   "homepage": "https://github.com/sagarpanda/reactjs-basics#readme",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "cross-env": "^5.0.5",
-    "react-qstart": "^0.1.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "2.9.7"
+    "react-qstart": "^1.1.1"
   }
 }
